<resources>
    <string name="app_name">Habitopia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_your_gender">Choose your Gender</string>
    <string name="pick_your_gender_to_personalize_your_experience">Pick your gender to personalize your experience</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="skip"><u>Skip</u></string>
    <string name="done"><u>Done</u></string>
    <string name="doneTask"><u>Done</u></string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="intro_text">Here are some Questions to create your habits</string>
    <string name="q1_label">Q1</string>
    <string name="q1_text">Do you like reading?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_text">Continue</string>
    <string name="progress_1">1</string>
    <string name="top_right_shape">Top right decorative shape</string>
    <string name="bottom_left_shape">Bottom left decorative shape</string>
    <string name="progress_step_1">Progress step 1</string>
    <string name="yes_button_description">Yes button for the question: Do you like reading?</string>
    <string name="no_button_description">No button for the question: Do you like reading?</string>
    <string name="continue_button_description">Continue button to proceed to the next question</string>
    <string name="skip_description">Skip the current question</string>
    <string name="q2_label">Q2</string>
    <string name="q2_text">If yes, how many pages would you like to read per day?</string>
    <string name="q2_label_description">Question 2 label</string>
    <string name="q2_text_description">Question 2 text: If yes, how many pages would you like to read per day?</string>
    <string name="pages_input_description">Enter the number of pages you would like to read per day</string>
    <string name="pages_input_hint">ِAnswer</string>
    <string name="progress_number_2">2</string>
    <string name="progress_number_2_description">Progress step 2</string>
    <string name="intro_text_description">Introduction text for the questionnaire</string>
    <string name="progress_background_description">Progress bar background</string>
    <string name="progress_foreground_description">Progress bar foreground</string>
    <string name="progress_container_description">Progress bar container</string>
    <string name="green_rectangle_description">Question container</string>
    <string name="continue_button_description_action">Continue to the next question</string>
    <string name="q3_label">Q3</string>
    <string name="q3_text">What time do you want to go to sleep daily?</string>
    <string name="q3_label_description">Question 3 label</string>
    <string name="q3_text_description">Question 3 text: What time do you want to go to sleep daily?</string>
    <string name="sleep_time_input_hint">Answer</string>
    <string name="progress_number_3">3</string>
    <string name="progress_number_3_description">Progress step 3</string>
    <string name="q4_label">Q4</string>
    <string name="q4_text">How many cups of water would you like to drink each day?</string>
    <string name="q4_label_description">Question 4 label</string>
    <string name="q4_text_description">Question 4 text: How many cups of water would you like to drink each day?</string>
    <string name="water_cups_input_hint">Answer</string>
    <string name="progress_number_4">4</string>
    <string name="progress_number_4_description">Progress step 4</string>
    <string name="q5_label">Q5</string>
    <string name="q5_text">What is your daily fitness goal?</string>
    <string name="q5_label_description">Question 5 label</string>
    <string name="q5_text_description">Question 5 text: What is your daily fitness goal?</string>
    <string name="progress_number_5">5</string>
    <string name="progress_number_5_description">Progress step 5</string>
    <string name="option_walk">Walk for 30 minutes</string>
    <string name="option_gym">Go to the gym</string>
    <string name="option_yoga">Do yoga or stretching</string>
    <string name="option_no_goal">No fitness goal for now</string>
    <string name="option_walk_description">Option: Walk for 30 minutes</string>
    <string name="option_gym_description">Option: Go to the gym</string>
    <string name="option_yoga_description">Option: Do yoga or stretching</string>
    <string name="option_no_goal_description">Option: No fitness goal for now</string>
    <string name="wavy_background_description">Wavy background for profile screen</string>
    <string name="avatar_description">User avatar image</string>
    <string name="answer_hint">Answer</string>
    <string name="default_name">Answer</string>
    <string name="default_email">Answer</string>
    <string name="reset_password">Reset Password ?</string>
    <string name="notifications_label">Notifications</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log Out</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="ellipse_12_description">First ellipse decoration</string>
    <string name="ellipse_17_description">Second ellipse decoration</string>
    <string name="component_6_description">Navigation bar for screen transitions</string>
    <string name="my_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>