<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2EADF">

    <!-- Top-Right Shape -->

    <!-- Intro Text (Outside the Green Rectangle, Top-Left) -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="-11dp"
        android:contentDescription="@string/bottom_left_shape"
        android:scaleType="fitXY">

    </ImageView>

    <!-- Intro Text (Outside the Green Rectangle, Top-Left) -->
    <TextView
        android:id="@+id/introText"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:padding="5dp"
        android:text="@string/intro_text"
        android:textColor="#27767B"
        android:textSize="25sp" />

    <!-- Progress Bar (Tow Rectangle Below Intro Text) -->
    <View
        android:id="@+id/progressBackground"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/introText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/progress_background" />

    <!-- Inner RelativeLayout for progressForeground and the number "1" -->
    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignStart="@id/progressBackground"
        android:layout_alignTop="@id/progressBackground"
        android:layout_alignBottom="@id/progressBackground">

        <View
            android:id="@+id/progressForeground"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:background="@drawable/progress_foreground"
            tools:ignore="UnusedAttribute" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/progressForeground"
            android:layout_alignEnd="@id/progressForeground"
            android:layout_alignParentStart="true"
            android:layout_marginStart="109dp"
            android:layout_marginTop="-4dp"
            android:gravity="center"
            android:text="1"
            android:textColor="#27767B"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- Main Content (Question and Answers in a Green Rectangle) -->
    <LinearLayout
        android:id="@+id/greenRectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Green Rectangle Background for Question and Answers -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/green"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="2dp"
                android:text="@string/q1_label"
                android:textColor="#F2EADF"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/q1_text"
                android:textColor="#F2EADF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/yesButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_button_background"
                android:contentDescription="@string/yes_button_description"
                android:text="@string/yes"
                android:textColor="#98A665"
                android:textSize="20sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/noButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/circle_button_background"
                android:contentDescription="@string/no_button_description"
                android:text="@string/no"
                android:textColor="#98A665"
                android:textSize="20sp"
                app:backgroundTint="@null" />
        </LinearLayout>
    </LinearLayout>

    <!-- Continue Button (Outside the Green Rectangle) -->
    <Button
        android:id="@+id/continueButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/greenRectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_button_background"
        android:text="@string/continue_text"
        android:textSize="20sp"
        android:textColor="#F2EADF"
        android:contentDescription="@string/continue_button_description" />

    <!-- Skip Text at the Bottom Right -->
    <TextView
        android:id="@+id/skipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/skip"
        android:padding="16dp"
        android:textColor="#27767B"
        android:textSize="30sp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/skip_description" />
</RelativeLayout>