<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige"
    tools:context=".Gender">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="24dp"
        android:src="@drawable/back_arrow">
    </ImageView>


    <TextView
        android:id="@+id/chooseGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/choose_your_gender"
        android:textColor="@color/green"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_your_gender_to_personalize_your_experience"
        android:textColor="@color/green"
        app:layout_constraintTop_toBottomOf="@id/chooseGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- MALE CARD -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/maleCard"
        android:layout_width="180dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/femaleCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="-120dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/male" />
        <TextView
            android:id="@+id/maleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/green"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="20dp">

        </TextView>
    </com.google.android.material.card.MaterialCardView>


    <!-- FEMALE CARD -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/femaleCard"
        android:layout_width="180dp"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toEndOf="@id/maleCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/white"
        android:layout_marginTop="-120dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/female" />
        <TextView
            android:id="@+id/femaleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginBottom="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/green"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal|bottom">

        </TextView>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/femaleCard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-100dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/next_arrow_unclicked">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>
